<resources>
    <string name="app_name"></string>
    <string name="naviopen">Open Navigation Drawer</string>
    <string name="naviclose">Close Navigation Drawer</string>
    <string name="name">Full Name</string>
    <string name="email">E-mail Address</string>
    <string name="phone">Contact No</string>
    <string name="country">Country</string>
    <string name="question">Ask Your Question</string>
    <string name="btncontact">SUBMIT</string>
    <string name="footer1">Will Send You An E-mail Within Day</string>
    <string name="footer2">Manager: Minindu Sudantha</string>
    <string name="footer3">gustoso97@outlook.com</string>
    <string name="footer4">gustoso97@gmail.com</string>
    <string name="reviewrate">Review Rate</string>
    <string name="review">Your Review</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="conpassword">Confirm Password</string>
    <string name="btnconfirm">Confirm</string>
    <string name="login">Log-in</string>
    <string name="signup">Sign-up</string>
    <string name="rate">Excellent,Super,Good,Bad,Poor</string>
    <string name="backHome">To Home</string>
    <string name="cusName">Lahiru Ferreira</string>
    <string name="cusReview">The food was amazing. love to come next time</string>
    <string name="cusRate">Superb</string>
    <string name="cusCountry">Sri Lanka</string>
    <string name="newarrival">- N E W A R R I V A L E S -</string>
    <string name="favourtites">- F A V O U R I T E S -</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">signup</string>
    <string name="order_txt">Order Your Food</string>
    <string name="order_txt3">Select food number :</string>
    <string name="order_hint">If you want to view price of one food please press price</string>
    <string name="order_price">Price</string>
    <string name="order_txt4">Select the size</string>
    <string name="order_txt5">Select Desert/Drink</string>
    <string name="order_radioButton">Small</string>
    <string name="order_radioButton2">Medium</string>
    <string name="order_radioButton3">Large</string>
    <string name="order_checkBox">Cool Drink</string>
    <string name="order_checkBox2">Salad</string>
    <string name="order_checkBox3">Pudding</string>
    <string name="order_txt13">Deliver Requird ?</string>
    <string name="order_switch1">YES</string>
    <string name="admin_delivery_txt1">Add New Delivery</string>
    <string name="admin_delivery_txt2">Customer Name</string>
    <string name="admin_diliadd">ADD Delivery</string>
    <string name="admin_txt_welcome">Hello,Welcome Admin</string>
    <string name="admin_btn1">Add delivery</string>
    <string name="admin_btn2">View Delivery</string>
    <string name="admin_btn3">Add Employee</string>
    <string name="admin_btn4">View foods</string>
    <string name="admin_btn5">Add food</string>
    <string name="admin_btn6">View Employee</string>
    <string name="admin_food_txt1">Viwe Food Details</string>
    <string name="admin_view_dili_txt1">View Delivery Details</string>
    <string name="order_submit">SUBMIT</string>
    <string name="order_txt8">Total Price :</string>
    <string name="admin_emp_txt1">Add New Employee</string>
    <string name="admin_emp_txt2">First Name</string>
    <string name="admin_emp_txt3">Last Name</string>
    <string name="admin_emp_txt4">Phone number</string>
    <string name="admin_emp_txt5">E-Mail</string>
    <string name="admin_emp_txt6">NIC</string>
    <string name="admin_emp_txt7">First Name</string>
    <string name="admin_emp_txt8">Last Name</string>
    <string name="admin_emp_txt9">Phone Number</string>
    <string name="admin_emp_txt10">E-Mail</string>
    <string name="admin_emp_txt11">NIC</string>
    <string name="admin_customer_txt1">Add New Customer</string>
    <string name="admin_customer_txt2">First Name</string>
    <string name="admin_customer_txt8">First Name</string>
    <string name="admin_customer_txt3">Last Name</string>
    <string name="admin_customer_txt7">Last Name</string>
    <string name="admin_customer_txt4">Phone number</string>
    <string name="admin_customer_txt10">Phone Number</string>
    <string name="admin_customer_txt5">E-Mail</string>
    <string name="admin_customer_txt11">E-Mail</string>
    <string name="admin_customer_txt6">NIC</string>
    <string name="admin_customer_txt9">NIC</string>
    <string name="admin_viewcus_txt">View Customer Details</string>
    <string name="FriedRice_txt1">Fried Rice</string>
    <string name="FriedRice_txt5">These are the regular prices!!</string>
    <string name="FriedRice_btn4">+</string>
    <string name="FriedRice_btn5">-</string>
    <string name="FriedRice_txt7">Chicken Friedrice</string>
    <string name="FriedRice_btn1">Rs.250.00</string>
    <string name="FriedRice_txt10">Fish Friedrice</string>
    <string name="FriedRice_btn3">Rs.200.00</string>
    <string name="FriedRice_txt11">These are the regular prices!</string>
    <string name="FriedRice_txt12">Chicken Friedrice</string>
    <string name="FriedRice_btn11">Rs.180.00</string>
    <string name="FriedRice_btn12">+</string>
    <string name="FriedRice_btn13">-</string>
    <string name="FriedRice_txt13">Fish Friedrice</string>
    <string name="FriedRice_btn14">Rs.150.00</string>
    <string name="FriedRice_btn15">+</string>
    <string name="FriedRice_btn16">+</string>
    <string name="FriedRice_btn17">-</string>
    <string name="admin_delivery_txt3">Customer Name</string>
    <string name="admin_delivery_txt4">Location</string>
    <string name="admin_delivery_txt5">Enter Delivery Location</string>
    <string name="admin_delivery_txt6">Date</string>
    <string name="admin_delivery_txt7">Enter Delivery Date(DD/MM/YYYY)</string>
    <string name="admin_delivery_txt8">Time</string>
    <string name="admin_delivery_txt9">Enter Delivery Time</string>
    <string name="admin_edit_delivery_txt1">Edit Delivery Details</string>
    <string name="admin_edit_delivery_txt2">Customer Name</string>
    <string name="admin_edit_delivery_txt3">Enter customer Name</string>
    <string name="admin_edit_delivery_txt4">Location</string>
    <string name="admin_edit_delivery_txt5">Enter Delivery Location</string>
    <string name="admin_edit_delivery_txt6">Date</string>
    <string name="admin_edit_delivery_txt7">Enter Delivery Date(DD/MM/YYYY)</string>
    <string name="admin_edit_delivery_txt8">Time</string>
    <string name="admin_edit_delivery_txt9">Enter Delivery Time</string>
    <string name="admin_edit_delivery_btnsave">Save</string>
    <string name="admin_edit_delivery_btndelete">Delete</string>
    <string name="admin_complete_delivery_txt1">Complete Delivery</string>
    <string name="admin_complete_delivery_txt2">Customer Name</string>
    <string name="admin_complete_delivery_txt3">Enter Customer Name</string>
    <string name="admin_complete_delivery_txt4">Notes</string>
    <string name="admin_complete_delivery_txt5">Enter Notes(Optional)</string>
    <string name="admin_complete_delivery_btn">ADD</string>
    <string name="admin_delivery_summary_txt1">Completed Deleviries</string>
    <string name="admin_delivery_summary_txt2">Name</string>
    <string name="admin_delivery_summary_txt4">Location</string>
    <string name="admin_delivery_summary_txt6">Date/Time</string>
    <string name="admin_delivery_summary_btn1">Home</string>
    <string name="admin_delivery_summary_btn2">Complete Delivery</string>
    <string name="admin_delivery_summary_btn3">Order List</string>
    <string name="admin_delivery_summary_btn4">Edit Delivery</string>
    <string name="admin_view_emp_txt1">View Employee Details</string>
    <string name="admin_c_emp_txt1">Registered Employee</string>
    <string name="admin_c_emp_txt2">Name</string>
    <string name="admin_c_emp_txt3">Enter Employee Name</string>
    <string name="admin_c_emp_txt4">Employee ID</string>
    <string name="admin_c_emp_txt5">Enter Employee ID</string>
    <string name="admin_c_emp_txt6">Position</string>
    <string name="admin_c_emp_txt7">Enter Position</string>
    <string name="admin_c_emp_btn">Submit</string>
    <string name="admin_s_emp_txt1">Registerd Employee Summary</string>
    <string name="admin_emp_txt12">Date</string>
    <string name="admin_emp_txt13">DD/MM/YYYY</string>
    <string name="admin_s_emp_txt2">First Name</string>
    <string name="admin_s_emp_txt4">Last Name</string>
    <string name="admin_s_emp_txt6">Phone Number</string>
    <string name="admin_s_emp_txt8">E-Mail</string>
    <string name="admin_s_emp_txt10">NIC</string>
    <string name="admin_s_emp_txt12">Date</string>
    <string name="admin_s_emp_btn1">Delivery List</string>
    <string name="admin_s_emp_btn2">Registerd Employee</string>
    <string name="admin_s_emp_btn3">Admin Dash Board</string>
    <string name="admin_s_emp_btn4">Edit Employee</string>
    <string name="admin_empedit_txt1">Edit Employee Details</string>
    <string name="admin_empedit_txt2">First Name</string>
    <string name="admin_empedit_txt3">Last Name</string>
    <string name="admin_empedit_txt4">Phone Number</string>
    <string name="admin_empedit_txt5">E-mail</string>
    <string name="admin_empedit_txt6">NIC</string>
    <string name="admin_empedit_txt12">Date</string>
    <string name="admin_empedit_txt7">First Name</string>
    <string name="admin_empedit_txt8">Last Name</string>
    <string name="admin_empedit_txt9">Phone Number</string>
    <string name="admin_empedit_txt10">Email</string>
    <string name="admin_empedit_txt11">NIC</string>
    <string name="admin_empedit_txt13">DD/MM/YYYY</string>
    <string name="admin_empsave">Save</string>
    <string name="admin_empdelete">Delete</string>
    <string name="menu_ourmenu">Our Menu</string>
    <string name="menu_fried">Fried Rice</string>
    <string name="menu_koththtu">Koththu</string>
    <string name="menu_headFried">Fried Rice Varieties</string>
    <string name="menu_beverage">Bevarages</string>
</resources>
